Regression(r53595): Sync xhr requests in workers aren't terminated on worker close. https://bugs.webkit.org/show_bug.cgi?id=71695

Reviewed by Zoltan Herczeg.

Source/JavaScriptCore:

* wtf/MessageQueue.h:
(WTF::MessageQueue::tryGetMessageIgnoringKilled): Added a way to get messages
even after the queue has been killed. This is useful when one wants to
kill a queue but then go through it to run clean up tasks from it.

Source/WebCore:

Overview: Message loops rely on the message queue being killed in order
to exit. r53595 stopped this from happening because killing a message loop
would also stop it from doing database clean up tasks. The database clean up
tasks needed to be tasks due to ordering issues. (They wanted to run after
certain order tasks were run.) This was solved by once again terminating
the message queue but then still runnning clean-up tasks from the killed
message queue.

* workers/WorkerRunLoop.cpp:
(WebCore::WorkerRunLoop::run): Added the call to run clean-up tasks.
(WebCore::WorkerRunLoop::runInMode):
(WebCore::WorkerRunLoop::runCleanupTasks): Loop to simply clear out all clean up tasks.
(WebCore::WorkerRunLoop::Task::performTask): Stop non-clean up tasks
from running after the loop has been terminated.
* workers/WorkerRunLoop.h:
(WebCore::WorkerRunLoop::terminated): Just made it const.
* workers/WorkerThread.cpp:
(WebCore::WorkerThreadShutdownFinishTask::performTask): Removed
the terminate clause since it was put back in stop.
(WebCore::WorkerThread::stop): Terminate the run loop so
that all loops will exit and clean up tasks will run. Also removed a comment
about nested workers because nested workers are no longer imminent and the
issue mentioned is one of many that should logically be investigated -- behavior correctness
in the face of different orderings of shutdown between the document and each worker --
when implementing them.

LayoutTests:

* http/tests/workers/resources/worker-util.js: Added.
Copied from fast/workers/resources/worker-util.js
* http/tests/xmlhttprequest/workers/abort-exception-assert.html:
Make the test wait for all workers to exit before finishing.

Canonical link: https://commits.webkit.org/90874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102473 268f45cc-cd09-0410-ab3c-d52691b4dbfc